2003-04-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* utilities/Makefile.am (check): Added code to put logo on demo
	output.
	* magick/command.c (MontageImageCommand): Pass exception rather
	than &image->exception because image may be null, and it is
	pointless to store the exception where it will not be reported to
	the user anyway.
	* utilities/Makefile.am (check): Ported Glenn Randers-Pehrson's
	utilities demo script into the Makefile to serve as a check
	target.
	(check): Add definition to find Generic.ttf.
	* locale/C.mgk: Fixed syntax error in <Option><FatalError>
	section.
	* www/development.html: New file to describe development
	process.
	* index.html, www/*.html: Added link to development.html
	and improved formatting a bit.

2003-04-21  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

	* Fixed bug with compiling png.c with libpng versions
	older than libpng-0.95.

2003-04-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/programming.html: Added links to Delphi and Scheme
	programming interfaces.
	* configure.ac : Removed outdated test for jp2conf.h.

2003-04-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c: Add argument expansion and deallocation code
	to command functions which lacked this functionality.
	Replace calls to Exit with a return to the invoking function.
	* utilities/gm.c: Expect each subcommand to expand and deallocate
	its own argument list.  Treat subcommands more similarly.
	* magick/magick.c (InitializeMagick): Seed the random number
	generator.
	* magick/utility.c (ExpandFilenames): Handle tilde expansion
	properly. Handle relative glob specifications. Skip over "*"
	argument to +profile properly. Don't expand VID: specifications
	since the VID: coder will execute ExpandFilenames() later. Apply
	format specifier prefix to globbed file names. Fix double frees
	and rationalize memory management by always copying to a new
	vector.

2003-04-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
