@@ -1,3 +1,8 @@
+2003-04-22  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
+
+	* utilities/Makefile.am (check) fixed typos (RM -> RMDelegate
+	and removed stray "gm"), added -random-threshold, ordered-dither.
+
 2003-04-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* utilities/Makefile.am (check): Added code to put logo on demo
